Add project to Git